deploy/k8s/deployment-manager.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blog
