deploy/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: nginx
          image: localhost:30500/dylan-blog:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blog
spec:
  selector: 
    app: blog
  type: ClusterIP  
  ports:
    - port: 80
      targetPort: 80
